[build-system]
requires = ["setuptools==70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taina"
dynamic = ["version"]
dependencies = [
    "SQLAlchemy==2.0.30",
    "alembic==1.13.1",
    "psycopg==3.1.19",
    "psycopg_pool==3.2.2",
    "pydantic-settings==2.2.1",
    "pydantic==2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.6.1",
    "pytest==8.2.1",
    "ruff==0.4.5",
]

[tool.setuptools.dynamic]
version = {attr = "taina.__version__"}

[tool.coverage.run]
omit = ["taina/migrations/*"]

[tool.pytest.ini_options]
addopts = "-n auto --cov=taina --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
    "F", "E", "W", "C90", "I", "N", "B", "A", "Q", "RET", "ERA", "RUF",
    "COM", "C4", "DTZ", "G", "PIE", "T20", "PT", "RSE", "SIM", "W",
]
ignore = ["N818"]

[tool.ruff.lint.isort]
force-single-line = true
